Fix alignment of post meta data

--- a/css/main.css
+++ b/css/main.css
@@ -169,7 +169,7 @@ img {
 }
 
 .post .title {
-    padding: 1% 0;
+    padding: 1rem 0 0 0;
     letter-spacing: -1px;
 }
 
@@ -180,8 +180,8 @@ img {
 }
 
 .post .meta {
-    margin-bottom: 6%;
-    padding: 2% 0;
+    margin:0;
+    padding: 0 0 1rem 0;
     text-align: left;
     font-family: 'Abel', sans-serif;
     font-size: 1.1rem;
@@ -193,7 +193,8 @@ img {
 }
 
 .post .entry {
-    padding: 0 0 4%;
+    clear: both;
+    padding: 0 0 2rem;
     text-align: justify;
 }
 
